--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css">
-    <title>Phaser Vue Template</title>
+    <title>Save Up! - PLEG.me</title>
+    <meta name="tags" content="Save Up!, 财务教育, 游戏, PLEG.me, play, learn, exercise, grow, Phaser.js" />
 </head>
 
 <body>
